@@ -1,0 +1,11 @@
+## Reference ##
+
+*   Introduction to OpenGL 4.1 - Tutorial 05
+	*   https://sites.google.com/site/opengltutorialsbyaks/introduction-to-opengl-4-1---tutorial-05
+*   OpenGL Insights - Chapter 33
+	*   http://openglinsights.com/
+	*   ARB_debug_output: A Helping Hand for Desperate Developers
+		*   http://www.seas.upenn.edu/~pcozzi/OpenGLInsights/OpenGLInsights-ARB_debug_output.pdf
+
+*   Fiddle::Closure::BlockCaller
+	*   http://ruby-doc.org/stdlib-2.1.0//libdoc/fiddle/rdoc/Fiddle/Closure/BlockCaller.html
