@@ -1,3 +1,7 @@
+2014-02-15  vaiorabbit  <https://twitter.com/vaiorabbit>
+
+	* sample/DebugOutput: Added.
+
 2014-02-09  vaiorabbit  <https://twitter.com/vaiorabbit>
 
 	* sample/GLExcess/glxs_glut.rb : Added.
